tests/ui/snapshots/types_mismatch_arg.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/types_mismatch_arg.wardscript
---
exit: Some(1)
--- human ---
[W0110] Error: mismatched types: expected `Int`, found `String`
   ╭─[ tests/ui/types_mismatch_arg.wardscript:6:12 ]
   │
 6 │     double("4")
   │            ─┬─  
   │             ╰─── expected `Int`, found `String`
───╯
error: could not check `tests/ui/types_mismatch_arg.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0110",
      "file": "tests/ui/types_mismatch_arg.wardscript",
      "help": null,
      "labels": [
        {
          "message": "expected `Int`, found `String`",
          "primary": true,
          "span": {
            "end": {
              "column": 15,
              "line": 6,
              "offset": 70
            },
            "start": {
              "column": 12,
              "line": 6,
              "offset": 67
            }
          }
        }
      ],
      "message": "mismatched types: expected `Int`, found `String`",
      "severity": "error",
      "span": {
        "end": {
          "column": 15,
          "line": 6,
          "offset": 70
        },
        "start": {
          "column": 12,
          "line": 6,
          "offset": 67
        }
      }
    }
  ],
  "file": "tests/ui/types_mismatch_arg.wardscript"
}
