tests/ui/snapshots/types_mismatch_let.snap
---
source: crates/ward_cli/tests/ui.rs
description: tests/ui/types_mismatch_let.ward
---
exit: Some(1)
--- human ---
[W0110] Error: mismatched types: expected `Int`, found `String`
   ╭─[ tests/ui/types_mismatch_let.ward:2:18 ]
   │
 2 │     let x: Int = "forty-two"
   │                  ─────┬─────  
   │                       ╰─────── expected `Int`, found `String`
───╯
error: could not check `tests/ui/types_mismatch_let.ward` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0110",
      "file": "tests/ui/types_mismatch_let.ward",
      "help": null,
      "labels": [
        {
          "message": "expected `Int`, found `String`",
          "primary": true,
          "span": {
            "end": {
              "column": 29,
              "line": 2,
              "offset": 44
            },
            "start": {
              "column": 18,
              "line": 2,
              "offset": 33
            }
          }
        }
      ],
      "message": "mismatched types: expected `Int`, found `String`",
      "severity": "error",
      "span": {
        "end": {
          "column": 29,
          "line": 2,
          "offset": 44
        },
        "start": {
          "column": 18,
          "line": 2,
          "offset": 33
        }
      }
    }
  ],
  "file": "tests/ui/types_mismatch_let.ward"
}
