tests/ui/snapshots/types_mismatch_return.snap
---
source: crates/ws_cli/tests/ui.rs
description: tests/ui/types_mismatch_return.wardscript
---
exit: Some(1)
--- human ---
[W0110] Error: mismatched types: expected `Int`, found `String`
   ╭─[ tests/ui/types_mismatch_return.wardscript:2:5 ]
   │
 2 │     name
   │     ──┬─  
   │       ╰─── expected `Int`, found `String`
───╯
error: could not check `tests/ui/types_mismatch_return.wardscript` due to 1 error
--- json ---
{
  "diagnostics": [
    {
      "code": "W0110",
      "file": "tests/ui/types_mismatch_return.wardscript",
      "help": null,
      "labels": [
        {
          "message": "expected `Int`, found `String`",
          "primary": true,
          "span": {
            "end": {
              "column": 9,
              "line": 2,
              "offset": 36
            },
            "start": {
              "column": 5,
              "line": 2,
              "offset": 32
            }
          }
        }
      ],
      "message": "mismatched types: expected `Int`, found `String`",
      "severity": "error",
      "span": {
        "end": {
          "column": 9,
          "line": 2,
          "offset": 36
        },
        "start": {
          "column": 5,
          "line": 2,
          "offset": 32
        }
      }
    }
  ],
  "file": "tests/ui/types_mismatch_return.wardscript"
}
